tests/baselines/reference/parserClassDeclaration24.errors.txt
==== tests/cases/compiler/parserClassDeclaration24.ts (1 errors) ====
    class any {
          ~~~
!!! parserClassDeclaration24.ts(1,7): error TS2241: Class name cannot be 'any'.
    }